--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,8 +12,8 @@
   --box-shadow: 1rem 1rem 1rem var(--shadow-dark-color),
   -1rem -1rem 1rem var(--shadow-dark-color);
 
-  --box-shadow-2: 0rem 0rem 0rem var(--shadow-dark-color),
-  -.3rem -.3rem 1rem var(--shadow-dark-color)
+  --box-shadow-2: 0rem 0rem 0rem var(--shadow-light-color),
+  -.3rem -.3rem 1rem var(--shadow-light-color)
 
 }
 
