--- a/styles/my-wallet.module.css
+++ b/styles/my-wallet.module.css
@@ -3,3 +3,23 @@
     width: 80%;
     margin: 0 auto;
 }
+
+.novcanik_box_nft{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    padding: 2rem;
+    gap: 2rem;
+    width: 80%;
+    background-color: var(--icons-color);
+    border-radius: 5rem;
+}
+
+.novcanik_box_nft_img{
+    border-radius: 2rem;
+    transition: all .3s ease-in;
+    margin-left: 2rem;
+}
+
+.novcanik_box_nft_img:hover{
+    box-shadow: var(--box-shadow);
+}
