--- a/styles/kompanije.module.css
+++ b/styles/kompanije.module.css
@@ -1,35 +1,38 @@
 
 .kompanije{
-    width: 80%;
+    width: 75%;
     margin: 0 auto;
     margin-top: 3rem;
     margin-bottom: 3rem;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(2, 3fr);
     align-items: relative;
     gap: 4rem;
 }
 
-.kompanije_box{
-    align-items: relative;
-    background-color: var(--icons-color);
-    border-radius: 8rem;
-    cursor: default;
-    transition: .3s ease-in;
+.kompanije_box_img{
+    border-radius: 5rem;
+    margin-left: 3.5rem;
+    margin-top: .5rem;
+    transition: all .3s ease-in;
 }
 
-.kompanije_box:hover{
+.kompanije_box_img:hover{
     box-shadow: var(--box-shadow);
 }
 
-.kompanije_box h2{
-    margin-top: -.5rem;
-    align-items: relative;
-    margin-left: 7rem;
-
+.kompanije_box_info h2{
+    text-align: center;
 }
 
-.kompanije_box_img{
-    border-radius: 2rem;
-    margin-left: 6rem;
+.kompanije_box_image{
+    background-color: var(--icons-color);
+    border-radius: 5rem;
+}
+
+.kompanije_box_info{
+    background-color: var(--icons-color);
+    border-radius: 5rem;
+    width: 80%;
+    margin-left: 4rem;
 }
