--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -3,6 +3,8 @@
     width: 100%;
     padding-block: 1.5rem;
     position: relative;
+    background:linear-gradient(rgba(100,15,20,0.5),transparent);
+    background-color: #470382;
 }
 
 .footer_box{ 
