--- a/styles/kolekcije.module.css
+++ b/styles/kolekcije.module.css
@@ -1,3 +1,7 @@
+.k{
+    background:linear-gradient(rgba(100,15,20,0.5),transparent);
+    background-color: #470382;
+}
 
 .kolekcije{
     width: 80%;
